Site-header-top

--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- Header -->
-  <header class="site-header container">
-    <h2 class="site-header-titile">Where in the world?</h2> 
-    <button class="site-header-dark-mode-button">Dark-mode</button>
+  <!-- Site-Header -->
+  <header class="site-header">
+    <div class="container site-header-container">
+      <a href="index.html" class="site-header-title links">Where in the world?</a>
+      <button type="button" class="site-header-theme-toggler">
+        <span class="site-header-theme-toggler-inner">
+          <img src="img/dark-mode-icon.svg" alt="" class="site-header-theme-toggler-icon">
+          <p class="site-header-theme-toggler-text">Dark mode</p>
+        </span>
+      </button>
+    </div>
   </header>
   <main class="main-content">
     <div class="container">
