--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   
   <!-- SITE-ICON -->
   <link rel="site icon" href="img/site-icon.jpg">
-    
+  
   <!-- STYLES -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="dark-mode">
+<body>
   <!-- Site-Header -->
   <header class="site-header">
     <div class="container site-header-container">
       <a href="index.html" class="site-header-title links">Where in the world?</a>
-      <button type="button" class="site-header-theme-toggler">
+      <button class="site-header-theme-toggler" type="button">
         <span class="site-header-theme-toggler-inner">
           <svg class=".site-header-theme-toggler-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path fill="#fff" fill-rule="evenodd" stroke="currentColor" stroke-width="1.25" d="M13.553 13.815c-3.884 0-7.034-2.887-7.034-6.447 0-1.343.448-2.586 1.212-3.618-3.04.945-5.231 3.581-5.231 6.688 0 3.9 3.45 7.062 7.704 7.062 3.389 0 6.266-2.007 7.296-4.796a7.458 7.458 0 0 1-3.947 1.111Z" clip-rule="evenodd"/></svg>
-          <p class="site-header-theme-toggler-text">Dark mode</p>
+          <p class="site-header-theme-toggler-text">Dark mode</p> 
         </span>
       </button>
     </div>
@@ -31,68 +31,80 @@
         <!-- Search-form -->
         <form class="main-functions" action="https://echo.htmlacademy.ru" method="GET">
           <!-- <img class="search-icon" src="img/search-icon.svg" alt="search icon"> -->
-          <input class="search-form-input" name="search" type="search" placeholder="Search for a country..." aria-label="Search" requirred>
-          <div class="main-filter">
-            <label for="region-type-select">Filtr by  Region</label>
-            <br>
-            <select name="region_type" id="region-type-select" placeholder="salom">
-              <option value="africa">Africa</option>
-              <option value="america">America</option>
-              <option value="asia">Asia</option>
-              <option value="europe">Europe</option>
-              <option value="oceania">Oceania</option>
+          <i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none"><path fill="#848484" fill-rule="evenodd" d="M12.5 11h-.8l-.3-.3c1-1.1 1.6-2.6 1.6-4.2C13 2.9 10.1 0 6.5 0S0 2.9 0 6.5 2.9 13 6.5 13c1.6 0 3.1-.6 4.2-1.6l.3.3v.8l5 5 1.5-1.5-5-5Zm-6 0C4 11 2 9 2 6.5S4 2 6.5 2 11 4 11 6.5 9 11 6.5 11Z" clip-rule="evenodd"/></svg>
+          </i>
+          <input class="search-form-input" name="search"  type="search" placeholder="Search for a country..." aria-label="Search filter" requirred>
+            <select class="filter" name="region_type" aria-label="Filter by region">
+              <option selected disabled>Filtr by  Region</option>
+              <option>Africa</option>
+              <option>America</option>
+              <option>Asia</option>
+              <option>Europe</option>
+              <option>Oceania</option>
             </select>
-          </div>
         </form>
         
         <!-- Main-Box -->
         <ul class="main-box-list">
-          <li class="main-box-item"><img  class="main-box-item-img" src="#" alt="flag">
+          <li class="main-box-item">
+            <img  class="main-box-item-img" src="img/Flag_of_Germany.svg" alt="flag">
           <div class="main-box-item-info">
-            <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-tetx"></p>
+            <h3 class="main-box-item-info-header">Germany</h3>
+            <p class="main-box item-info-text">
+              Population: 81,770,900
+              Population: 81,770,900
+              Population: 81,770,900
+            </p>
           </div>
           </li>
-          <li class="main-box-item"><img  class="main-box-item-img" src="#" alt="flag">
+          <li class="main-box-item">
+            <img  class="main-box-item-img" src="#" alt="flag">
           <div class="main-box-item-info">
             <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-tetx"></p>
+            <p class="main-box item-info-text"></p>
           </div>
           </li>
-          <li class="main-box-item"><img  class="main-box-item-img" src="#" alt="flag">
+          <li class="main-box-item">
+            <img  class="main-box-item-img" src="#" alt="flag">
           <div class="main-box-item-info">
             <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-tetx"></p>
+            <p class="main-box item-info-text"></p>
           </div>
           </li>
-          <li class="main-box-item"><img  class="main-box-item-img" src="#" alt="flag">
+          <li class="main-box-item">
+            <img  class="main-box-item-img" src="#" alt="flag">
           <div class="main-box-item-info">
             <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-tetx"></p>
+            <p class="main-box item-info-text"></p>
           </div>
           </li>
-          <li class="main-box-item"><img  class="main-box-item-img" src="#" alt="flag">
+          <li class="main-box-item">
+            <img  class="main-box-item-img" src="#" alt="flag">
           <div class="main-box-item-info">
             <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-tetx"></p>
+            <p class="main-box item-info-text"></p>
           </div>
           </li>
-          <li class="main-box-item"><img  class="main-box-item-img" src="#" alt="flag">
+          <li class="main-box-item">
+            <img  class="main-box-item-img" src="#" alt="flag">
           <div class="main-box-item-info">
             <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-tetx"></p>
+            <p class="main-box item-info-text"></p>
           </div>
           </li>
-          <li class="main-box-item"><img  class="main-box-item-img" src="#" alt="flag">
+          <li class="main-box-item">
+            <img  class="main-box-item-img" src="#" alt="flag">
           <div class="main-box-item-info">
             <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-tetx"></p>
+            <p class="main-box item-info-text"></p>
           </div>
           </li>
-          <li class="main-box-item"><img  class="main-box-item-img" src="#" alt="flag">
+          <li class="main-box-item">
+            <img  class="main-box-item-img" src="#" alt="flag">
           <div class="main-box-item-info">
             <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-tetx"></p>
+            <p class="main-box item-info-text"></p>
           </div>
           </li>
         </ul>
