Add index-country section

--- a/index.html
+++ b/index.html
@@ -20,21 +20,26 @@
       <button class="site-header-theme-toggler" type="button">
         <span class="site-header-theme-toggler-inner">
           <svg class=".site-header-theme-toggler-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path fill="#fff" fill-rule="evenodd" stroke="currentColor" stroke-width="1.25" d="M13.553 13.815c-3.884 0-7.034-2.887-7.034-6.447 0-1.343.448-2.586 1.212-3.618-3.04.945-5.231 3.581-5.231 6.688 0 3.9 3.45 7.062 7.704 7.062 3.389 0 6.266-2.007 7.296-4.796a7.458 7.458 0 0 1-3.947 1.111Z" clip-rule="evenodd"/></svg>
-          <p class="site-header-theme-toggler-text">Dark mode</p> 
+          Dark mode
+          <!-- <p class="site-header-theme-toggler-text"></p> -->
         </span>
       </button>
     </div>
   </header>
+  
+  
   <main class="main-content">
     <div class="container">
-      <div class="main-box">
-        <!-- Search-form -->
-        <form class="main-functions" action="https://echo.htmlacademy.ru" method="GET">
-          <!-- <img class="search-icon" src="img/search-icon.svg" alt="search icon"> -->
-          <i>
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none"><path fill="#848484" fill-rule="evenodd" d="M12.5 11h-.8l-.3-.3c1-1.1 1.6-2.6 1.6-4.2C13 2.9 10.1 0 6.5 0S0 2.9 0 6.5 2.9 13 6.5 13c1.6 0 3.1-.6 4.2-1.6l.3.3v.8l5 5 1.5-1.5-5-5Zm-6 0C4 11 2 9 2 6.5S4 2 6.5 2 11 4 11 6.5 9 11 6.5 11Z" clip-rule="evenodd"/></svg>
-          </i>
-          <input class="search-form-input" name="search"  type="search" placeholder="Search for a country..." aria-label="Search filter" requirred>
+      <section>
+        <!-- <h3>Filtrlar</h3> -->
+        <div class="filtres">
+          <!-- Search-form -->
+          <form class="filtres-box" action="https://echo.htmlacademy.ru" method="GET">
+            <!-- <img class="search-icon" src="img/search-icon.svg" alt="search icon">
+            <i>
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none"><path fill="#848484" fill-rule="evenodd" d="M12.5 11h-.8l-.3-.3c1-1.1 1.6-2.6 1.6-4.2C13 2.9 10.1 0 6.5 0S0 2.9 0 6.5 2.9 13 6.5 13c1.6 0 3.1-.6 4.2-1.6l.3.3v.8l5 5 1.5-1.5-5-5Zm-6 0C4 11 2 9 2 6.5S4 2 6.5 2 11 4 11 6.5 9 11 6.5 11Z" clip-rule="evenodd"/></svg>
+            </i> -->
+            <input class="search-form-input" name="search"  type="search" placeholder="Search for a country..." aria-label="Search filter">
             <select class="filter" name="region_type" aria-label="Filter by region">
               <option selected disabled>Filtr by  Region</option>
               <option>Africa</option>
@@ -43,73 +48,160 @@
               <option>Europe</option>
               <option>Oceania</option>
             </select>
-        </form>
+          </form>
+          </div>
+        </section>
         
-        <!-- Main-Box -->
-        <ul class="main-box-list">
-          <li class="main-box-item">
-            <img  class="main-box-item-img" src="img/Flag_of_Germany.svg" alt="flag">
-          <div class="main-box-item-info">
-            <h3 class="main-box-item-info-header">Germany</h3>
-            <p class="main-box item-info-text">
-              Population: 81,770,900
-              Population: 81,770,900
-              Population: 81,770,900
-            </p>
-          </div>
-          </li>
-          <li class="main-box-item">
-            <img  class="main-box-item-img" src="#" alt="flag">
-          <div class="main-box-item-info">
-            <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-text"></p>
-          </div>
-          </li>
-          <li class="main-box-item">
-            <img  class="main-box-item-img" src="#" alt="flag">
-          <div class="main-box-item-info">
-            <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-text"></p>
-          </div>
-          </li>
-          <li class="main-box-item">
-            <img  class="main-box-item-img" src="#" alt="flag">
-          <div class="main-box-item-info">
-            <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-text"></p>
-          </div>
-          </li>
-          <li class="main-box-item">
-            <img  class="main-box-item-img" src="#" alt="flag">
-          <div class="main-box-item-info">
-            <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-text"></p>
-          </div>
-          </li>
-          <li class="main-box-item">
-            <img  class="main-box-item-img" src="#" alt="flag">
-          <div class="main-box-item-info">
-            <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-text"></p>
-          </div>
-          </li>
-          <li class="main-box-item">
-            <img  class="main-box-item-img" src="#" alt="flag">
-          <div class="main-box-item-info">
-            <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-text"></p>
-          </div>
-          </li>
-          <li class="main-box-item">
-            <img  class="main-box-item-img" src="#" alt="flag">
-          <div class="main-box-item-info">
-            <h3 class="main-box-item-info-header"></h3>
-            <p class="main-box item-info-text"></p>
-          </div>
-          </li>
-        </ul>
+        <!-- Index-Country -->
+        <section class="index-countries">
+          <!-- <h2>Index-Country</h2> -->
+          <ul class="index-countries-list">
+            <li class="index-countries-item">
+              <div class="index-country">
+                <img  class="index-country-flag" src="img/Flag_of_Germany.jpg" alt="Germany flag" width="264" height="160" srcset="img/Flag_of_Germany.jpg 1x, img/Flag_of_Germany@2x.jpg 2x">
+                <div class="index-country-info">
+                  <h3 class="index-country-name">
+                    <a href="country.html" class="index-country-link">Germany</a>
+                  </h3>
+                  <dl class="index-country-details">
+                    <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
+                      <dd class="index-country-value">81.770.900</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Region:</dt>
+                      <dd class="index-country-value">Europe</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Capital:</dt>
+                      <dd class="index-country-value">Berlin</dd></div>
+                  </dl>
+                </div>
+              </div>
+            </li>
+            <li class="index-countries-item">
+              <div class="index-country">
+                <img  class="index-country-flag" src="img/Flag_of_USA.jpg" alt="USA flag" width="264" height="160" srcset="img/Flag_of_USA.jpg 1x, img/Flag_of_USA@2x.jpg 2x">
+                <div class="index-country-info">
+                  <h3 class="index-country-name">
+                    <a href="country.html" class="index-country-link">United States of America</a> </h3>
+                  <dl class="index-country-details">
+                    <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
+                      <dd class="index-country-value">323,947,000</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Region:</dt>
+                      <dd class="index-country-value">Americas</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Capital:</dt>
+                      <dd class="index-country-value">Washington,DC.</dd></div>
+                  </dl>
+                </div>
+              </div>
+            </li>
+            <li class="index-countries-item">
+              <div class="index-country">
+                <img  class="index-country-flag" src="img/Flag_of_Brasil.jpg" alt="Brasil flag" width="264" height="160" srcset="img/Flag_of_Brasil.jpg 1x, img/Flag_of_Brasil@2x.jpg 2x">
+                <div class="index-country-info">
+                  <h3 class="index-country-name">
+                    <a href="country.html" class="index-country-link">Brasil</a>
+                  </h3>
+                  <dl class="index-country-details">
+                    <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
+                      <dd class="index-country-value">206,135,893</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Region:</dt>
+                      <dd class="index-country-value">Americas</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Capital:</dt>
+                      <dd class="index-country-value">Brasília</dd></div>
+                  </dl>
+                </div>
+              </div>
+            </li>
+            <li class="index-countries-item">
+              <div class="index-country">
+                <img  class="index-country-flag" src="img/Flag_of_Iceland.jpg" alt="Iceland flag" width="264" height="160" srcset="img/Flag_of_Iceland.jpg 1x, img/Flag_of_Iceland@2x.jpg 2x">
+                <div class="index-country-info">
+                  <h3 class="index-country-name">
+                    <a href="country.html" class="index-country-link">Iceland</a>
+                  </h3>
+                  <dl class="index-country-details">
+                    <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
+                      <dd class="index-country-value">334,300</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Region:</dt>
+                      <dd class="index-country-value">Europe</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Capital:</dt>
+                      <dd class="index-country-value">Reykjavík</dd></div>
+                  </dl>
+                </div>
+              </div>
+            </li>
+            <li class="index-countries-item">
+              <div class="index-country">
+                <img  class="index-country-flag" src="img/Flag_of_Afghanistan.jpg" alt="Afghanistan flag" width="264" height="160" srcset="img/Flag_of_Afghanistan.jpg 1x, img/Flag_of_Afghanistan@2x.jpg 2x">
+                <div class="index-country-info">
+                  <h3 class="index-country-name">
+                    <a href="country.html" class="index-country-link">Afghanistan</a>
+                  </h3>
+                  <dl class="index-country-details">
+                    <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
+                      <dd class="index-country-value">27,657,145</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Region:</dt>
+                      <dd class="index-country-value">Asia</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Capital:</dt>
+                      <dd class="index-country-value">Kabul</dd></div>
+                  </dl>
+                </div>
+              </div>
+            </li>
+            <li class="index-countries-item">
+              <div class="index-country">
+                <img  class="index-country-flag" src="img/Flag_of_Aland_Islands.jpg" alt="Aland_Islands flag" width="264" height="160" srcset="img/Flag_of_Aland_Islands.jpg 1x, img/Flag_of_Aland_Islands@2x.jpg 2x">
+                <div class="index-country-info">
+                  <h3 class="index-country-name">
+                    <a href="country.html" class="index-country-link">Aland Islands</a>
+                  </h3>
+                  <dl class="index-country-details">
+                    <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
+                      <dd class="index-country-value">28,875</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Region:</dt>
+                      <dd class="index-country-value">Europe</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Capital:</dt>
+                      <dd class="index-country-value">Mariehamn</dd></div>
+                  </dl>
+                </div>
+              </div>
+            </li>
+            <li class="index-countries-item">
+              <div class="index-country">
+                <img  class="index-country-flag" src="img/Flag_of_Albania.jpg" alt="Albania flag" width="264" height="160" srcset="img/Flag_of_Albania.jpg 1x, img/Flag_of_Albania@2x.jpg 2x">
+                <div class="index-country-info">
+                  <h3 class="index-country-name">
+                    <a href="country.html" class="index-country-link">Albania</a>
+                  </h3>
+                  <dl class="index-country-details">
+                    <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
+                      <dd class="index-country-value">2,886,026</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Region:</dt>
+                      <dd class="index-country-value">Europe</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Capital:</dt>
+                      <dd class="index-country-value">Tirana</dd></div>
+                  </dl>
+                </div>
+              </div>
+            </li>
+            <li class="index-countries-item">
+              <div class="index-country">
+                <img  class="inydex-country-flag" src="img/Flag_of_Algeriya.jpg" alt="Algeriya flag" width="264" height="160" srcset="img/Flag_of_Algeriya.jpg 1x, img/Flag_of_Algeriya@2x.jpg 2x">
+                <div class="index-country-info">
+                  <h3 class="index-country-name">
+                    <a href="country.html" class="index-country-link">Algeria</a>
+                  </h3>
+                  <dl class="index-country-details">
+                    <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
+                      <dd class="index-country-value">40,400,000</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Region:</dt>
+                      <dd class="index-country-value">Africa</dd></div>
+                    <div class="index-country-details-item"><dt class="index-country-title">Capital:</dt>
+                      <dd class="index-country-value">Algiers</dd></div>
+                  </dl>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </section>
       </div>
-    </div>
   </main>
   
   <script src="js/main.js"></script>
