Add countries list

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       <button class="site-header-theme-toggler" type="button">
         <span class="site-header-theme-toggler-inner">
           <svg class=".site-header-theme-toggler-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path fill="#fff" fill-rule="evenodd" stroke="currentColor" stroke-width="1.25" d="M13.553 13.815c-3.884 0-7.034-2.887-7.034-6.447 0-1.343.448-2.586 1.212-3.618-3.04.945-5.231 3.581-5.231 6.688 0 3.9 3.45 7.062 7.704 7.062 3.389 0 6.266-2.007 7.296-4.796a7.458 7.458 0 0 1-3.947 1.111Z" clip-rule="evenodd"/></svg>
-          Dark mode
-          <!-- <p class="site-header-theme-toggler-text"></p> -->
+          <span class="site-header-theme-toggler-text">Dark mode</span>
         </span>
       </button>
     </div>
@@ -61,7 +60,7 @@
                 <img  class="index-country-flag" src="img/Flag_of_Germany.jpg" alt="Germany flag" width="264" height="160" srcset="img/Flag_of_Germany.jpg 1x, img/Flag_of_Germany@2x.jpg 2x">
                 <div class="index-country-info">
                   <h3 class="index-country-name">
-                    <a href="country.html" class="index-country-link">Germany</a>
+                    <a href="country.html" class="index-country-link links">Germany</a>
                   </h3>
                   <dl class="index-country-details">
                     <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
@@ -79,7 +78,7 @@
                 <img  class="index-country-flag" src="img/Flag_of_USA.jpg" alt="USA flag" width="264" height="160" srcset="img/Flag_of_USA.jpg 1x, img/Flag_of_USA@2x.jpg 2x">
                 <div class="index-country-info">
                   <h3 class="index-country-name">
-                    <a href="country.html" class="index-country-link">United States of America</a> </h3>
+                    <a href="country.html" class="index-country-link links">United States of America</a> </h3>
                   <dl class="index-country-details">
                     <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
                       <dd class="index-country-value">323,947,000</dd></div>
@@ -96,7 +95,7 @@
                 <img  class="index-country-flag" src="img/Flag_of_Brasil.jpg" alt="Brasil flag" width="264" height="160" srcset="img/Flag_of_Brasil.jpg 1x, img/Flag_of_Brasil@2x.jpg 2x">
                 <div class="index-country-info">
                   <h3 class="index-country-name">
-                    <a href="country.html" class="index-country-link">Brasil</a>
+                    <a href="country.html" class="index-country-link links">Brasil</a>
                   </h3>
                   <dl class="index-country-details">
                     <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
@@ -114,7 +113,7 @@
                 <img  class="index-country-flag" src="img/Flag_of_Iceland.jpg" alt="Iceland flag" width="264" height="160" srcset="img/Flag_of_Iceland.jpg 1x, img/Flag_of_Iceland@2x.jpg 2x">
                 <div class="index-country-info">
                   <h3 class="index-country-name">
-                    <a href="country.html" class="index-country-link">Iceland</a>
+                    <a href="country.html" class="index-country-link links">Iceland</a>
                   </h3>
                   <dl class="index-country-details">
                     <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
@@ -132,7 +131,7 @@
                 <img  class="index-country-flag" src="img/Flag_of_Afghanistan.jpg" alt="Afghanistan flag" width="264" height="160" srcset="img/Flag_of_Afghanistan.jpg 1x, img/Flag_of_Afghanistan@2x.jpg 2x">
                 <div class="index-country-info">
                   <h3 class="index-country-name">
-                    <a href="country.html" class="index-country-link">Afghanistan</a>
+                    <a href="country.html" class="index-country-link links">Afghanistan</a>
                   </h3>
                   <dl class="index-country-details">
                     <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
@@ -150,7 +149,7 @@
                 <img  class="index-country-flag" src="img/Flag_of_Aland_Islands.jpg" alt="Aland_Islands flag" width="264" height="160" srcset="img/Flag_of_Aland_Islands.jpg 1x, img/Flag_of_Aland_Islands@2x.jpg 2x">
                 <div class="index-country-info">
                   <h3 class="index-country-name">
-                    <a href="country.html" class="index-country-link">Aland Islands</a>
+                    <a href="country.html" class="index-country-link links">Aland Islands</a>
                   </h3>
                   <dl class="index-country-details">
                     <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
@@ -168,7 +167,7 @@
                 <img  class="index-country-flag" src="img/Flag_of_Albania.jpg" alt="Albania flag" width="264" height="160" srcset="img/Flag_of_Albania.jpg 1x, img/Flag_of_Albania@2x.jpg 2x">
                 <div class="index-country-info">
                   <h3 class="index-country-name">
-                    <a href="country.html" class="index-country-link">Albania</a>
+                    <a href="country.html" class="index-country-link links">Albania</a>
                   </h3>
                   <dl class="index-country-details">
                     <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
@@ -186,7 +185,7 @@
                 <img  class="inydex-country-flag" src="img/Flag_of_Algeriya.jpg" alt="Algeriya flag" width="264" height="160" srcset="img/Flag_of_Algeriya.jpg 1x, img/Flag_of_Algeriya@2x.jpg 2x">
                 <div class="index-country-info">
                   <h3 class="index-country-name">
-                    <a href="country.html" class="index-country-link">Algeria</a>
+                    <a href="country.html" class="index-country-link links">Algeria</a>
                   </h3>
                   <dl class="index-country-details">
                     <div class="index-country-details-item"><dt class="index-country-title">Population:</dt>
