Фвв мшыгфддн ршввут р2 ащк ыусешщт

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <main class="main-content">
     <div class="container">
       <section>
-        <!-- <h3>Filtrlar</h3> -->
+        <h3 class="visually-hidden">Filtrlar</h3>
         <div class="filtres">
           <!-- Search-form -->
           <form class="filtres-form" action="https://echo.htmlacademy.ru" method="GET">
